fix the tag for v_rpt_pos_offtake

--- a/models/india/indedw_integration/pos/_indedw_integration__pos.yml
+++ b/models/india/indedw_integration/pos/_indedw_integration__pos.yml
@@ -8,4 +8,4 @@ models:
   - name: indedw_integration__v_rpt_pos_offtake
     config:
       alias: v_rpt_pos_offtake
-      tags: ["in_key_acct_offtake","transformation"]
+      tags: ["in_key_acct_offtake","in_edw_kasales","transformation"]
