--- a/models/north_asia/ntaitg_integration/product/_ntaitg_integration__product.yml
+++ b/models/north_asia/ntaitg_integration/product/_ntaitg_integration__product.yml
@@ -24,7 +24,7 @@ models:
   - name: ntaitg_integration__itg_mds_hk_product_hierarchy
     config:
         alias: itg_mds_hk_product_hierarchy
-        tags: ["kr_master_mds_sdl_itg_load","ingestion"]
+        tags: ["kr_master_mds_sdl_itg_load","transformation"]
   - name: ntaitg_integration__itg_mds_kr_keyword_classifications
     config:
         alias: itg_mds_kr_keyword_classifications
@@ -44,7 +44,7 @@ models:
   - name: ntaitg_integration__itg_mds_kr_product_hierarchy
     config:
         alias: itg_mds_kr_product_hierarchy
-        tags: ["kr_master_mds_sdl_itg_load","ingestion"]
+        tags: ["kr_master_mds_sdl_itg_load","transformation"]
   - name: ntaitg_integration__itg_kr_gt_daiso_price
     config:
         alias: itg_kr_gt_daiso_price
