--- a/models/hcposea/hcposeitg_integration/sector_mapping/_hcposeitg_integration_sector_mapping.yml
+++ b/models/hcposea/hcposeitg_integration/sector_mapping/_hcposeitg_integration_sector_mapping.yml
@@ -6,7 +6,7 @@ models:
       alias: sdl_raw_hcp_osea_isight_sector_mapping
       tags: ["master_file_data_ingestion","ingestion"]
 
-  - name: hcposeitg_integration__isight_sector_mapping
+  - name: hcposeitg_integration__itg_isight_sector_mapping
     config: 
-      alias: isight_sector_mapping
+      alias: itg_isight_sector_mapping
       tags: ["master_file_data_ingestion","ingestion"]
