--- a/models/singapore/sgpitg_integration/sellout/_sources_sgpitg_integration__sellout_apate012.yml
+++ b/models/singapore/sgpitg_integration/sellout/_sources_sgpitg_integration__sellout_apate012.yml
@@ -10,4 +10,7 @@ sources:
       identifier: false
     tables:
       - name: TRATBL_sdl_sg_zuellig_sellout__lookup_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__null_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__duplicate_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__lookup_test
         
