--- a/models/singapore/sgpitg_integration/pop6/_sources_sgpitg_integration__pop6_apate012.yml
+++ b/models/singapore/sgpitg_integration/pop6/_sources_sgpitg_integration__pop6_apate012.yml
@@ -16,4 +16,10 @@ sources:
       - name: TRATBL_sdl_pop6_sg_product_attribute_audits__duplicate_test
       - name: TRATBL_sdl_pop6_sg_displays__duplicate_test
       - name: TRATBL_sdl_pop6_sg_displays__null_test
+      - name: TRATBL_sdl_pop6_sg_general_audits__null_test
+      - name: TRATBL_sdl_pop6_sg_general_audits__duplicate_test 
+      - name: TRATBL_sdl_pop6_sg_executed_visits__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_executed_visits__null_test
+      - name: TRATBL_sdl_pop6_sg_promotion_plans__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_promotion_plans__null_test
      
