fixed yaml for missing entry

--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -385,6 +385,13 @@ models:
     config:
       alias: odr_returnitem_detail
       tags: ["japan_dcl_views","transformation"]
+
+  - name: jpndcledw_integration__report_006_a
+    config:
+      alias: report_006_a
+      tags: ["japan_dcl_views","transformation"]
+      
+  - name: jpndcledw_integration__report_006_a_newly_added
  
   - name: jpndcledw_integration__report__006_a_newly_added4
     config:
