--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -992,3 +992,8 @@ models:
     config:
       alias: '"cewq028破損商品"'
       tags: ["japan_dcl_views","inactive"]
+
+  - name: jpndcledw_integration__tw05kokyarecalc
+    config:
+      alias: tw05kokyarecalc
+      tags: ["japan_dcl_views","inactive"]
