--- a/models/indonesia/idnedw_integration/perfect_store/_idnedw_integration__perfect_store.yml
+++ b/models/indonesia/idnedw_integration/perfect_store/_idnedw_integration__perfect_store.yml
@@ -59,4 +59,4 @@ models:
   - name: idnedw_integration__v_rpt_id_regional_perfect_store
     config: 
         alias: v_rpt_id_regional_perfect_store
-        tags: ["pop6_views", "transformation"]
+        tags: ["id_ps_datamart", "transformation"]
