--- a/models/philippines/phlitg_integration/_sources_phlitg_integration_test.yml
+++ b/models/philippines/phlitg_integration/_sources_phlitg_integration_test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: phlwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sshukl02_workspace
+    schema: phlwks_integration
     quoting:
       database: false
       schema: false
