--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,6 +35,11 @@ vars:
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
+tests:
+  DNA_CORE_ASP:
+    philippines:
+      +severity: warn
+
 models:
   dbt_artifacts:
     +enabled: false
