--- a/models/philippines/phlitg_integration/product/_phlitg_integration__product.yml
+++ b/models/philippines/phlitg_integration/product/_phlitg_integration__product.yml
@@ -9,43 +9,43 @@ models:
   - name: phlitg_integration__sdl_raw_ph_non_ise_landmark_sm
     config:
       alias: sdl_raw_ph_non_ise_landmark_sm
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_landmark_ds
     config:
       alias: sdl_raw_ph_non_ise_landmark_ds
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_puregold
     config:
       alias: sdl_raw_ph_non_ise_puregold
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_robinsons_ds
     config:
       alias: sdl_raw_ph_non_ise_robinsons_ds
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_robinsons_sm
     config:
       alias: sdl_raw_ph_non_ise_robinsons_sm
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_rustans
     config:
       alias: sdl_raw_ph_non_ise_rustans
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_shm
     config:
       alias: sdl_raw_ph_non_ise_shm
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_super_8
     config:
       alias: sdl_raw_ph_non_ise_super_8
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_svi_smc
     config:
       alias: sdl_raw_ph_non_ise_svi_smc
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__sdl_raw_ph_non_ise_waltermart
     config:
       alias: sdl_raw_ph_non_ise_waltermart
-      tags: ["ph_non_pos", "ingestion"]
+      tags: ["ph_non_pos", "ingestion", "transformation"]
   - name: phlitg_integration__itg_ph_dyna_product_dim
     config:
       alias: itg_ph_dyna_product_dim
