--- a/models/north_asia/ntaedw_integration/inventory/_ntaedw_integration__inventory.yml
+++ b/models/north_asia/ntaedw_integration/inventory/_ntaedw_integration__inventory.yml
@@ -28,11 +28,11 @@ models:
   - name: ntaedw_integration__vw_edw_kr_ecom_dstr_sellout
     config:
       alias: vw_edw_kr_ecom_dstr_sellout
-      tags: ["","transformation"]
+      tags: ["j_ap_th_reg_data_refresh","transformation"]
   - name: ntaedw_integration__vw_edw_kr_ecom_dstr_inventory
     config:
       alias: vw_edw_kr_ecom_dstr_inventory
-      tags: ["","transformation"]
+      tags: ["j_ap_th_reg_data_refresh","transformation"]
   - name: ntaedw_integration__edw_otc_inv_si_so
     config:
       alias: edw_otc_inv_si_so
