Fix for model name

--- a/models/hcposea/hcposeitg_integration/cycle/_hcposeitg_integration_cycle.yml
+++ b/models/hcposea/hcposeitg_integration/cycle/_hcposeitg_integration_cycle.yml
@@ -8,7 +8,7 @@ models:
 
   - name: hcposeitg_integration__itg_cycle_plan_detail
     config:
-      alias: itg_cycle_plan_target_detail
+      alias: itg_cycle_plan_detail
       tags: ["iconnect_data_ingestion","ingestion"]
 
   - name: hcposeitg_integration__itg_cycle_plan
