--- a/models/asp_regional/aspitg_integration/travel_retail/_sources_aspitg_integration__travel_retail.yml
+++ b/models/asp_regional/aspitg_integration/travel_retail/_sources_aspitg_integration__travel_retail.yml
@@ -122,7 +122,7 @@ sources:
                 schema: aspwks_integration
           - test_lookup__ff:
               failure_reason: "Missing DCL Code records compared with master"
-              column: "trim(dcl_code)"
+              column: " REGEXP_REPLACE(dcl_code, '[^A-Za-z0-9-]','')"
               lookup_column: "trim(dcl_code)"
               lookup_table: "{{ ref('aspitg_integration__itg_rg_travel_retail_product_mapping') }}"
               lookup_filter: "upper(ctry_cd) = 'KR'"
