--- a/models/vietnam/vnmitg_integration/_sources_vnmitg_integration__test.yml
+++ b/models/vietnam/vnmitg_integration/_sources_vnmitg_integration__test.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: vnmwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: sshukl02_workspace
+    schema: vnmwks_integration
     quoting:
       database: false
       schema: false
