--- a/models/hcposea/hcposeitg_integration/recordtype/_sources_hcposeitg_integration__recordtype.yml
+++ b/models/hcposea/hcposeitg_integration/recordtype/_sources_hcposeitg_integration__recordtype.yml
@@ -29,6 +29,7 @@ sources:
             schema: hcposewks_integration
 
     - name: sdl_hcp_osea_recordtype_rg
+      tags: ["iconnect_data_ingestion","ingestion"]
       tests:
       - test_null:
           select_columns: ["record_type_source_id"]
