--- a/models/india/inditg_integration/rtl/_sources_inditg_integration_test_apate012__rtl.yml
+++ b/models/india/inditg_integration/rtl/_sources_inditg_integration_test_apate012__rtl.yml
@@ -3,7 +3,7 @@ version: 2
 sources:  
   - name: indwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: APATE012_WORKSPACE
+    schema: indwks_integration
     quoting:
       database: false
       schema: false
