--- a/models/singapore/sgpitg_integration/trade_promotion/_sources_sgpitg_integration__trade_promotion.yml
+++ b/models/singapore/sgpitg_integration/trade_promotion/_sources_sgpitg_integration__trade_promotion.yml
@@ -49,3 +49,16 @@ sources:
               config:
                 store_failures: true
                 schema: sgpwks_integration
+  
+  - name: sgpwks_integration
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: sgpwks_integration
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+      - name: TRATBL_sdl_sg_tp_closed_year_bal__null_test
+      - name: TRATBL_sdl_sg_tp_closed_year_bal__lookup_test
+      - name: TRATBL_sdl_sg_tp_closed_month__null_test
+      - name: TRATBL_sdl_sg_tp_closed_month__lookup_test
