--- a/models/india/inditg_integration/geo/_sources_inditg_integration__geo.yml
+++ b/models/india/inditg_integration/geo/_sources_inditg_integration__geo.yml
@@ -28,3 +28,16 @@ sources:
                 schema: indwks_integration
       - name: sdl_mds_in_geo_tracker_coordinates
         tags: ["in_mds_refresh","transformation"]
+
+  - name: indwks_integration
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: indwks_integration
+
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+      - name: TRATBL_sdl_in_rretailergeoextension__null_test
+        # tags: ["in_etl_xdm_tlrsr_nielsen_load","ingestion"]
+      - name: TRATBL_sdl_in_rretailergeoextension__duplicate_test
