--- a/models/india/inditg_integration/mds/_sources_inditg_integration__mds.yml
+++ b/models/india/inditg_integration/mds/_sources_inditg_integration__mds.yml
@@ -316,3 +316,5 @@ sources:
       identifier: false
     tables:
       - name: wks_jnj_calendar
+
+      - name: TRATBL_sdl_sss_scorecard_data__null_test
