--- a/models/india/inditg_integration/salesman/_sources_inditg_integration__salesman.yml
+++ b/models/india/inditg_integration/salesman/_sources_inditg_integration__salesman.yml
@@ -67,3 +67,18 @@ sources:
       tags: ["in_sdlitg_salescube_master","ingestion"]
     - name: sdl_salesman_target
       tags: ["j_in_salesman_target_load","transformation"]
+
+  - name: indwks_integration
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: indwks_integration
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+    - name: TRATBL_sdl_in_route__null_test
+    - name: TRATBL_sdl_in_route__duplicate_test
+    - name: TRATBL_sdl_in_salesman__null_test
+    - name: TRATBL_sdl_in_salesman__duplicate_test
+    - name: TRATBL_sdl_in_salesman_route__null_test
+    - name: TRATBL_sdl_in_salesman_route__duplicate_test
