--- a/models/singapore/sgpitg_integration/sellout/_sources_sgpitg_integration__sellout.yml
+++ b/models/singapore/sgpitg_integration/sellout/_sources_sgpitg_integration__sellout.yml
@@ -79,3 +79,17 @@ sources:
       identifier: false
     tables:
       - name: itg_query_parameters
+
+  - name: sgpwks_integration
+    database: "{{ env_var('DBT_ENV_CORE_DB') }}"
+    schema: sgpwks_integration
+    quoting:
+      database: false
+      schema: false
+      identifier: false
+    tables:
+      - name: TRATBL_sdl_sg_zuellig_sellout__lookup_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__null_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__duplicate_test
+      - name: TRATBL_sdl_sg_zuellig_customer_mapping__lookup_test
+        
