--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -46,6 +46,10 @@ tests:
       +severity: warn
     vietnam:
       +severity: warn
+    india:
+      +severity: warn
+    singapore:
+      +severity: warn
 
 models:
   dbt_artifacts:
