--- a/models/philippines/phlitg_integration/branch/_sources_phlitg_integration__branch.yml
+++ b/models/philippines/phlitg_integration/branch/_sources_phlitg_integration__branch.yml
@@ -10,7 +10,7 @@ sources:
       identifier: false
     tables:
     - name: sdl_ph_tbl_isebranchmaster
-      tags: ["ph_perfectstore_branchmaster","ingestion"]
+      tags: ["ph_perfectstore","ingestion"]
       tests:
           - test_null:
               select_columns: ["branchcode","parentcode"]
