sdl_cbd_gt_inventory_report_fact tag's modified

--- a/models/thailand/thaitg_integration/inventory/_sources_thaitg_integration__inventory.yml
+++ b/models/thailand/thaitg_integration/inventory/_sources_thaitg_integration__inventory.yml
@@ -49,7 +49,7 @@ sources:
                 store_failures: true
                 schema: thawks_integration
     - name: sdl_cbd_gt_inventory_report_fact
-      tags: ["cambodia_file_ingestion"]
+      tags: ["cambodia_file_ingestion","ingestion"]
       tests:
                 - test_null:
                       not_null_columns: ["date","product_code","product_name","filename"]
