--- a/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
+++ b/models/japan_dcl/jpndcledw_integration/view/_jpndcledw_integration__view.yml
@@ -991,7 +991,7 @@ models:
   - name: jpndcledw_integration__cewq028
     config:
       alias: '"cewq028破損商品"'
-      tags: ["japan_dcl_views","inactive"]
+      tags: ["japan_dcl_views","transformation"]
 
   - name: jpndcledw_integration__tw05kokyarecalc
     config:
