--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,6 +34,34 @@ vars:
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+
+
+tests:
+  DNA_CORE_ASP:
+    philippines:
+      +severity: warn
+      phlitg_integration:
+        sfmc:
+          +severity: error
+    thailand:
+      +severity: warn
+      thaitg_integration:
+        pop6: 
+          +severity: error
+        sfmc:
+          +severity: error
+    malaysia:
+      +severity: warn
+    vietnam:
+      +severity: warn
+    india:
+      +severity: warn
+    singapore:
+      +severity: warn
+      sgpitg_integration:
+        pop6: 
+          +severity: error
+
 models:
   dbt_artifacts:
     +enabled: false
@@ -599,6 +627,38 @@ models:
       hcpedw_access:
         +materialized: view
         +schema: HCPEDW_ACCESS
+
+    hcposea:
+      config:
+        +enabled: true
+        +sql_header: "ALTER SESSION SET TIMEZONE = 'UTC';"
+      hcposeedw_integration:
+        +materialized: table
+        +transient: false
+        +schema: HCPOSEEDW_INTEGRATION
+        call:
+          view:
+            +materialized: view
+        cycle:
+          view:
+            +materialized: view
+        employee:
+          view:
+            +materialized: view
+        time_off_territory:
+          view:
+            +materialized: view
+        user:
+          view:
+            +materialized: view
+      hcposeitg_integration:
+        +materialized: table
+        +transient: false
+        +schema: HCPOSEITG_INTEGRATION
+      hcposeedw_access:
+        +materialized: view
+        +schema: HCPOSEEDW_ACCESS
+
     japan_dcl:
       config:
         +enabled: true
@@ -616,9 +676,21 @@ models:
       jpndcledw_access:
         +materialized: view
         +schema: JPDCLEDW_ACCESS
-
-
-
-
-
-
+    china:
+      config:
+        +enabled: true
+        +sql_header: "ALTER SESSION SET TIMEZONE = 'Asia/Shanghai';"
+      chnedw_integration:
+        +materialized: table
+        +transient: false
+        +schema: CHNEDW_INTEGRATION
+      chnitg_integration:
+        +materialized: table
+        +transient: false
+        +schema: CHNITG_INTEGRATION
+      chnwks_integration:
+        +materialized: table
+        +schema: CHNWKS_INTEGRATION
+      chnedw_access:
+        +materialized: view
+        +schema: CHNEDW_ACCESS
