--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -61,6 +61,8 @@ tests:
       sgpitg_integration:
         pop6: 
           +severity: error
+    japan:
+      +severity: warn
 
 models:
   dbt_artifacts:
