--- a/models/indonesia/idnitg_integration/_sources_idnitg_integration__test.yml
+++ b/models/indonesia/idnitg_integration/_sources_idnitg_integration__test.yml
@@ -1,13 +1,37 @@
 sources:
   - name: idnwks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: ppahil01_workspace
+    schema: idnwks_integration
     quoting:
       database: false
       schema: false
       identifier: false
     tables:
     
+    - name: TRATBL_sdl_distributor_ivy_merchandising__null_test
+    - name: TRATBL_sdl_distributor_ivy_merchandising__duplicate_test
+    - name: TRATBL_sdl_distributor_ivy_invoice__null_test
+    - name: TRATBL_sdl_distributor_ivy_invoice__test_lookup__ff
+    - name: TRATBL_sdl_distributor_ivy_order__null_test
+    - name: TRATBL_sdl_distributor_ivy_order__test_lookup__ff
+    - name: TRATBL_sdl_distributor_ivy_outlet_master__null_test
+    - name: TRATBL_sdl_distributor_ivy_outlet_master__duplicate_test
+    - name: TRATBL_sdl_id_ps_promotion__null_test
+    - name: TRATBL_sdl_id_ps_promotion__duplicate_test
+    - name: TRATBL_sdl_id_ps_promotion_competitor__null_test
+    - name: TRATBL_sdl_id_ps_promotion_competitor__duplicate_test
+    - name: TRATBL_sdl_id_ps_pricing__null_test
+    - name: TRATBL_sdl_id_ps_pricing__duplicate_test
+    - name: TRATBL_sdl_id_ps_product_availability__null_test
+    - name: TRATBL_sdl_id_ps_product_availability__duplicate_test
+    - name: TRATBL_sdl_id_ps_visibility__null_test
+    - name: TRATBL_sdl_id_ps_visibility__duplicate_test
+    - name: TRATBL_sdl_id_ps_secondary_display__null_test
+    - name: TRATBL_sdl_id_ps_secondary_display__duplicate_test
+    - name: TRATBL_sdl_id_ps_planogram__null_test
+    - name: TRATBL_sdl_id_ps_planogram__duplicate_test
+    - name: TRATBL_sdl_id_ps_brand_blocking__null_test
+    - name: TRATBL_sdl_id_ps_brand_blocking__duplicate_test
     - name: TRATBL_sdl_id_pos_watson_stock__null_test
     - name: TRATBL_sdl_id_pos_watson_stock__duplicate_test
     - name: TRATBL_sdl_id_pos_watson_stock__date_format_test
