--- a/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__Sourcesdqtests_nnaras01.yml
+++ b/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__Sourcesdqtests_nnaras01.yml
@@ -419,6 +419,22 @@ sources:
       - name: TRATBL_sdl_pop6_jp_pops__duplicate_test
       - name: TRATBL_sdl_pop6_jp_products__null_test
       - name: TRATBL_sdl_pop6_jp_products__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_product_attribute_audits__null_test
+      - name: TRATBL_sdl_pop6_sg_product_attribute_audits__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_sku_audits__null_test
+      - name: TRATBL_sdl_pop6_sg_sku_audits__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_tasks__null_test
+      - name: TRATBL_sdl_pop6_sg_tasks__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_general_audits__null_test
+      - name: TRATBL_sdl_pop6_sg_general_audits__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_displays__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_displays__null_test
+      - name: TRATBL_sdl_pop6_sg_promotions__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_promotions__null_test
+      - name: TRATBL_sdl_pop6_sg_promotion_plans__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_promotion_plans__null_test
+      - name: TRATBL_sdl_pop6_sg_executed_visits__duplicate_test
+      - name: TRATBL_sdl_pop6_sg_executed_visits__null_test
  
 
 
