Update dbt_project.yml exclude pop6 for Jpn
Signed-off-by: YMoger01 <158460502+YMoger01@users.noreply.github.com>

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -63,6 +63,9 @@ tests:
           +severity: error
     japan:
       +severity: warn
+      jpnitg_integration:
+        pop6: 
+          +severity: error
     japan_dcl:
       +severity: warn    
     pacific:
