--- a/models/hcp/hcpitg_integration/sales/_sources_hcpitg_integration__sales.yml
+++ b/models/hcp/hcpitg_integration/sales/_sources_hcpitg_integration__sales.yml
@@ -44,15 +44,15 @@ sources:
                   schema: hcpwks_integration
     - name: sdl_hcp360_in_iqvia_speciality
       # tags: ["in_iqvia_load","ingestion"]
-      tests:
-        - test_format:
-                select_columns: ["product_description"]
-                failure_reason: "'Column value mismatch'"
-                where_clause: "brand IN ('ORS-L', 'ORS-L FOS', 'ORS-L PLUS', 'ORS-L REHYDRATE', 'ORS%') AND product_description NOT IN (SELECT iqvia FROM {{ ref('hcpitg_integration__itg_mds_hcp360_product_mapping') }} WHERE brand = 'ORSL')"
-                name: TRATBL_sdl_hcp360_in_iqvia_speciality__test_format
-                config:
-                  store_failures: true
-                  schema: hcpwks_integration
+      # tests:
+      #   - test_format:
+      #           select_columns: ["product_description"]
+      #           failure_reason: "'Column value mismatch'"
+      #           where_clause: "brand IN ('ORS-L', 'ORS-L FOS', 'ORS-L PLUS', 'ORS-L REHYDRATE', 'ORS%') AND product_description NOT IN (SELECT iqvia FROM {{ ref('hcpitg_integration__itg_mds_hcp360_product_mapping') }} WHERE brand = 'ORSL')"
+      #           name: TRATBL_sdl_hcp360_in_iqvia_speciality__test_format
+      #           config:
+      #             store_failures: true
+      #             schema: hcpwks_integration
     - name: sdl_hcp360_in_iqvia_aveeno_zone
       tags: ["in_iqvia_load","ingestion"]
       tests:
