--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -50,6 +50,8 @@ tests:
       +severity: warn
     singapore:
       +severity: warn
+    north_asia:
+      +severity: warn
 
 models:
   dbt_artifacts:
