--- a/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__Sourcesdqtests_nnaras01.yml
+++ b/models/north_asia/ntaitg_integration/_sources_ntaitg_integration__Sourcesdqtests_nnaras01.yml
@@ -3,7 +3,7 @@ version: 2
 sources:
   - name: ntawks_integration
     database: "{{ env_var('DBT_ENV_CORE_DB') }}"
-    schema: ppahil0101_workspace
+    schema: nnaras01_workspace
     quoting:
       database: false
       schema: false
